# tweet-deleter

./: .gitignore  README.md  delete_old_tweets.py  get_token.py  pyproject.toml  requirements.txt
